--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width" />
-		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' />
 		<link rel="stylesheet" type="text/css" href="estilo.css" />
 		<title>Com o mercado, para o futuro | B3 </title>
 	</head>
